RESOLVED FIXED18664
SQUIRRELFISH: correctly throw a SyntaxError when parsing of eval code fails
https://bugs.webkit.org/show_bug.cgi?id=18664
Summary SQUIRRELFISH: correctly throw a SyntaxError when parsing of eval code fails
Cameron Zwarich (cpst)
Reported 2008-04-21 11:52:26 PDT
SquirrelFish does not currently throw a SyntaxError when parsing of eval code fails. This causes the failure of some JavaScriptCore tests that expect a SyntaxError.
Attachments
Proposed patch (1.03 KB, patch)
2008-04-21 11:56 PDT, Cameron Zwarich (cpst)
oliver: review+
Cameron Zwarich (cpst)
Comment 1 2008-04-21 11:56:58 PDT
Created attachment 20733 [details] Proposed patch Oliver already reviewed it, but I can't land it myself. This patch fixes 8 JavaScriptCore test failures. There is no change on SunSpider.
Oliver Hunt
Comment 2 2008-04-21 12:00:38 PDT
Committed r32332
Note You need to log in before you can comment on or make changes to this bug.