Bug 18664: SQUIRRELFISH: correctly throw a SyntaxError when parsing of eval code fails <https://bugs.webkit.org/show_bug.cgi?id=18664>

Patch from Cameron Zwarich  <cwzwarich@uwaterloo.ca>
Reviewed by Oliver

Correctly throw a SyntaxError when parsing of eval code fails.


git-svn-id: http://svn.webkit.org/repository/webkit/branches/squirrelfish@32332 268f45cc-cd09-0410-ab3c-d52691b4dbfc